# BarrySharpProMover

./: .gitattributes  .gitignore  BARRY-SHARP-PRO-MOVER-1.gbsproj  Makefile  Makefile.automation  README.md  bootstrap_pm_backbone.sh  project_state.json  pyproject.toml  requirements.txt  run_langflow.py  start_langflow.sh  start_langflow_local.sh  sync_gbsres.sh
.langflow/agents/: registry.json
.langflow/components/: ci_cd_pipeline.py  enhanced_file_watcher.py  file_watcher.py  gbstudio_build.py  import_nodes.py  notifier.py  registry.json
.langflow/flows/: TheConductor_PM_LangFlow.json  build_department.json  build_flow.json  (+2 more)
assets/: settings.gbsres  user_settings.gbsres
barrysharp_components.egg-info/: PKG-INFO  SOURCES.txt
docs/: AUTOMATION_GUIDE.md  LANGFLOW_LOCAL_SETUP_GUIDE.md  N8N_WORKFLOW_GUIDE.md  status_report_20250601.md
langflow/: pyproject.toml  start_langflow.sh
langflow_components/: file_watcher.py  gbstudio_build.py  import_nodes.py  report_gen.py
langflow_projects/: TheConductor_PM_LangFlow.json
memory/: approval_queue.json  pm_ledger.jsonl
n8n_workflows/: Build_Workflow_n8n.json  Enhanced_Automation_n8n.json  RAG_Index_Builder_n8n.json  RAG_Retriever_n8n.json  TheConductor_PM_n8n.json
project/: settings.gbsres.bak
scripts/: README.md  automation_control.sh  build_rag.py  manage_faiss.py  notify_cli.sh  snapshot.sh  test_rag.py
staging/: design_output.json
tools/: ci_cd_pipeline.py  enhanced_file_watcher.py  file_watcher.py  gbstudio_build.py  notifier.py  notify_cli.sh  report_gen.py  snapshot.sh
vectorstore/: metadata.json
(+22 files in other folders)
